...
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="EMPLOYEE DATA"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:queryHint="SEARCH"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/lv2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv1" />

            <ListView
                android:fastScrollEnabled="true"
...
